--- a/stotram/argala-stotram.html
+++ b/stotram/argala-stotram.html
@@ -1,84 +1,424 @@
 <!DOCTYPE html>
 <html lang="kn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಅರ್ಗಲಾ ಸ್ತೋತ್ರಂ (Argala Stotram)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
-    
+
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
 
 <body>
+
     <h1>ಅರ್ಗಲಾ ಸ್ತೋತ್ರಂ <span class="ENG">(Argala Stotram)</span></h1>
 
-    <img id="image" src="../images/argala-stotram.png" alt="Goddess Durga" style="max-width: 300px; display: block; margin: 16px 0;">
+    <button onclick="toggleVisibility()">Show/Hide English Transliteration</button>
+
+    <img id="image" src="../images/argala-stotram.png" alt="Goddess Durga"
+        style="max-width: 300px; display: block; margin: 16px 0;">
+
+    <a href="https://youtu.be/gA61mHwD8Zo?si=ZlhTHznLtfc75Ls8" target="_blank">Vedik Heritage - Meaning</a>
+
+    <h2>ವಿನಿಯೋಗಃ <span class="ENG">(Viniyōgaḥ)</span></h2>
 
     <p>
-        ಪತ್ನೀಂ ಮನೋರಮಾಂ ದೇಹಿ ಮನೋವೃತ್ತಾನುಸಾರಿಣೀಂ | <br>
-        ತಾರಿಣೀಂ ದುರ್ಗಸಂಸಾರ-ಸಾಗರಸ್ಯ ಕುಲೋದ್ಭವಾಂ ||
+        ಓಂ ನಮಶ್ಚಂಡಿಕಾಯೈ | <br>
+        <span class="ENG">ōṁ namaścaṇḍikāyai | (Salutations to the Goddess Chandika) <br>
+        </span>
+    </p>
+
+    <p>ಅಥ ಅರ್ಗಲಾ ಸ್ತೋತ್ರಮ್
+        <span class="ENG">Atha Argala Stotram (This is the Argala Stotram)<br>
+        </span>
     </p>
 
     <p>
-        Patnīṁ manoramāṁ dēhi manōvṛttānusāriṇīm | <br>
-        Tāriṇīṁ durgasaṁsārasāgarasya kulōdbhavām ||
+        ಅಸ್ಯ ಶ್ರೀ ಅರ್ಗಲಾ ಸ್ತೋತ್ರ ಮಂತ್ರಸ್ಯ <br>
+        ಸ್ವರ್ಣಾಕರ್ಷಣ ಭೈರವ ಋಷಿಃ, <br>
+        ಅನುಷ್ಟುಪ್ ಛಂದಃ <br>
+        ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮಿ ಚಂಡಿಕಾ ದೇವತಾ, <br>
+        ಅಂ ಬೀಜಂ, ಗಂ ಶಕ್ತಿಃ, ಲಂ ಕೀಲಕಂ, <br>
+        ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ಚಂಡಿಕಾ ಪ್ರಸಾದ ಸಿದ್ಧ್ಯರ್ಥೆ <br>
+        ಜಪೇ ವಿನಿಯೋಗಃ ||<br>
+        <span class="ENG">
+            asya shree-argalaa-stotra-mantrasya (of this auspicious Argala Stotram)<br>
+            svarna-akarshana-bhairavah rishih (Svarnaakarshana Bhairava - Shiva - is the Rishi)<br>
+            Anushtup chandah (in the poetic metre of Anushtup) <br>
+            shree-mahalakshmi-chandikaa-devata (main deity of the stotra is mahalakshmi chandika devi) <br>
+            Am beejam, gam shaktih, lam keelakam, (Am is seed, Gam is energy, Lam is key) <br>
+            shree-mahalakshmi-chandikaa prasaada siddhyarthe (for the blessing of mahalakshmi chandika devi)<br>
+            jape viniyogah (this is the practice of japa/chant) ॥
+        </span>
     </p>
+
+    OR <br>
+
+    <p>ಅಸ್ಯ ಶ್ರೀ ಅರ್ಗಲಾಸ್ತೋತ್ರಮಹಾಮಂತ್ರಸ್ಯ ವಿಷ್ಣುರೃಷಿಃ, <br>
+        ಅನುಷ್ಟುಪ್ ಛಂದಃ, ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀರ್ದೇವತಾ, <br>
+        ಶ್ರೀ ಜಗದಂಬಾಪ್ರೀತಯೇ ಸಪ್ತಶತೀಪಾಠಾಂಗತ್ವೇನ ಜಪೇ ವಿನಿಯೋಗಃ || <br>
+        <span class="ENG">
+            asya śrī argalāstōtramahāmantrasya viṣṇurr̥ṣiḥ, <br>
+            anuṣṭup chandaḥ, śrī mahālakṣmīrdēvatā, <br>
+            śrī jagadambāprītayē saptaśatīpāṭhāṅgatvēna japē viniyōgaḥ ||
+        </span>
+    </p>
+
+    <h2>
+        ಮಾರ್ಕಂಡೇಯ ಉವಾಚ |<br>
+        <span class="ENG">mārkaṇḍēya uvāca |</span>
+    </h2>
 
     <p>
-        பத்னீம் மனோரமாம் தேஹி மனோவ்ருத்தானுசாரிணீம் | <br>
-        தாரிணீம் துர்கஸம்ஸாரசாகரஸ்ய குலோத்பவாம் ||
+        ಓಂ ನಮಶ್ಚಂಡಿಕಾಯೈ | <br>
+        <span class="ENG">ōṁ namaścaṇḍikāyai |</span>
     </p>
 
-    <p>
-        पत्नीं मनोरमां देहि मनोवृत्तानुसारिणीम् | <br>
-        तारिणींदुर्गसंसारसागरस्य कुलोद्भवाम् ||
-    </p>
+    <h3>ಧ್ಯಾನಂ <span class="ENG">(Dhyaanam)</span></h2>
 
-    Chant this mantra daily for 41 days (one mandala), 108 times using a japa mala, before beginning bride search.<br>
-    Source: <a href="https://youtube.com/shorts/D84vrDrqOG4?si=h7SjTwnHkKvZWyrd" target="_blank" rel="noopener">
-        (Youtube Short)</a>
-    <a href="https://youtu.be/esLAkMjZdUA?si=fbgMiICpq7IB-3aJ" target="_blank" rel="noopener">Explanation by Chaganti Koteswara Rao Garu</a>
+        <p>
+            ಕಾಶಮಧ್ಯಸ್ಥಿತಚಿತ್ಸ್ವರೂಪಾಂ <br>
+            ವರಾಭಯೇ ಸನ್ದಧತೀಂ ತ್ರಿನೇತ್ರಾಂ <br>
+            ಸಿಂದೂರವರ್ಣಾಂಚಿತಕೋಮಲಾಂಗೀಂ <br>
+            ಮಾಯಾಮಯೀಂ ತತ್ತ್ವಮಯೀಂ ನಮಾಮಿ || <br>
 
-    
-    <h4>Meaning</h4>
-    O Mother Durgā! Bless me with a wife<br>
-    who delights my mind,<br>
-    who acts in accordance with my nature,<br>
-    who helps uplift and support me,<br>
-    who enables me to cross the vast ocean of worldly existence,<br>
-    and who is capable of giving birth to a son who uplifts the lineage.<br>
+            <span class="ENG">
+                prakasha-madhya-sthita-chit-svaroopaam <br>
+                varaabhaye sandadhateem trineedraam <br>
+                sindooravarna-anchita-komalaangeem <br>
+                maayaamayeem tattvamayeem namaami ||
+            </span>
+        </p>
 
-    <h4>Sankalpa</h4>
-    <ul>
-        <li>Set a clear intention (e.g., to find a good life partner).</li>
-        <li>Write and repeat it daily before chanting.</li>
-    </ul>
+        <h3>ಸ್ತೋತ್ರಂ <span class="ENG">(Stotram)</span></h2>
 
-    <h4>Daily Practice</h4>
-    <ul>
-        <li>Time: Early morning (Brahma Muhurta, 4–6 AM).</li>
-        <li>Cleanliness: Bathe and wear clean clothes.</li>
-        <li>Altar: Place an image of Goddess Durga or Amman.</li>
-        <li>Offerings: Light a lamp, offer flowers, incense, and food.</li>
-    </ul>
+            <p>
+                ಜಯ ತ್ವಂ ದೇವಿ ಚಾಮುಂಡೇ ಜಯ ಭೂತಾಪಹಾರಿಣಿ |<br>
+                ಜಯ ಸರ್ವಗತೇ ದೇವಿ ಕಾಳರಾತ್ರಿ ನಮೋಽಸ್ತು ತೇ || ೧ || <br>
+                <span class="ENG">
+                    jaya tvaṁ dēvi cāmuṇḍē jaya bhūtāpahāriṇi | <br>
+                    jaya sarvagatē dēvi kālarātri namō:'stu tē || 1 ||
+                </span>
+            </p>
 
-    <h4>Japa Discipline</h4>
-    <ul>
-        <li>Chant 108 times daily with a mala (rudraksha or tulsi).</li>
-        <li>Be consistent — don’t skip days.</li>
-        <li>Sit in the same place and direction (preferably east).</li>
-    </ul>
+            <p>
+                ಜಯಂತೀ ಮಂಗಳಾ ಕಾಳೀ ಭದ್ರಕಾಳೀ ಕಪಾಲಿನೀ |<br>
+                ದುರ್ಗಾ ಶಿವಾ ಕ್ಷಮಾ ಧಾತ್ರೀ ಸ್ವಾಹಾ ಸ್ವಧಾ ನಮೋಽಸ್ತು ತೇ || ೨ || <br>
+                <span class="ENG">
+                    jayantī maṅgalā kālī bhadrakālī kapālinī |<br>
+                    durgā śivā kṣamā dhātrī svāhā svadhā namō:'stu tē || 2 ||
+                </span>
+            </p>
 
-    <h4>Completion</h4>
-    <ul>
-        <li>On day 41, perform a special puja or homa if possible.</li>
-        <li>On day 41 , perform a special puja or homa if possible.</li>
-        <li>Thank the Goddess and release your intention.</li>
-    </ul>
+            <p>
+                ಮಧುಕೈಟಭವಿಧ್ವಂಸಿ ವಿಧಾತೃವರದೇ ನಮಃ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೩ || <br>
+                <span class="ENG">
+                    madhukaiṭabhavidhvaṁsi vidhātr̥varadē namaḥ |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 3 ||
+                </span>
+            </p>
 
-    <!-- Centralized Scripts -->
-    <script src="../scripts/common.js"></script>
+            <p>
+                ಮಹಿಷಾಸುರನಿರ್ನಾಶಿ ಭಕ್ತಾನಾಂ ಸುಖದೇ ನಮಃ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೪ || <br>
+                <span class="ENG">
+                    mahiṣāsuranirnāśi bhaktānāṁ sukhadē namaḥ |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 4 ||
+                </span>
+            </p>
+
+            <p>
+                ಧೂಮ್ರನೇತ್ರವಧೇ ದೇವಿ ಧರ್ಮಕಾಮಾರ್ಥದಾಯಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೫ || <br>
+                <span class="ENG">
+                    dhūmranētravadhē dēvi dharmakāmārthadāyini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 5 ||
+                </span>
+            </p>
+
+            <p>
+                ರಕ್ತಬೀಜವಧೇ ದೇವಿ ಚಂಡಮುಂಡವಿನಾಶಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೬ || <br>
+                <span class="ENG">
+                    raktabījavadhē dēvi caṇḍamuṇḍavināśini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 6 ||
+                </span>
+            </p>
+
+            <p>
+                ನಿಶುಂಭಶುಂಭನಿರ್ನಾಶಿ ತ್ರೈಲೋಕ್ಯಶುಭದೇ ನಮಃ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೭ || <br>
+                <span class="ENG">
+                    niśumbhaśumbhanirnāśi trailōkyaśubhadē namaḥ |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 7 ||
+                </span>
+            </p>
+
+            <p>
+                ವಂದಿತಾಂಘ್ರಿಯುಗೇ ದೇವಿ ಸರ್ವಸೌಭಾಗ್ಯದಾಯಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೮ || <br>
+                <span class="ENG">
+                    vanditāṅghriyugē dēvi sarvasaubhāgyadāyini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 8 ||
+                </span>
+            </p>
+
+
+            <p>
+                ಅಚಿಂತ್ಯರೂಪಚರಿತೇ ಸರ್ವಶತ್ರುವಿನಾಶಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೯ || <br>
+                <span class="ENG">
+                    acintyarūpacaritē sarvaśatruvināśini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 9 ||
+                </span>
+            </p>
+
+            <p>
+                ನತೇಭ್ಯಃ ಸರ್ವದಾ ಭಕ್ತ್ಯಾ ಚಾಪರ್ಣೇ ದುರಿತಾಪಹೇ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೦ || <br>
+                <span class="ENG">
+                    natēbhyaḥ sarvadā bhaktyā cāparṇē duritāpahē |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 10 ||
+                </span>
+            </p>
+
+            <p>
+                ಸ್ತುವದ್ಭ್ಯೋ ಭಕ್ತಿಪೂರ್ವಂ ತ್ವಾಂ ಚಂಡಿಕೇ ವ್ಯಾಧಿನಾಶಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೧ || <br>
+                <span class="ENG">
+                    stuvadbhyō bhaktipūrvaṁ tvāṁ caṇḍikē vyādhināśini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 11 ||
+                </span>
+            </p>
+
+            <p>
+                ಚಂಡಿಕೇ ಸತತಂ ಯುದ್ಧೇ ಜಯಂತಿ ಪಾಪನಾಶಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೨ || <br>
+                <span class="ENG">
+                    caṇḍikē satataṁ yuddhē jayanti pāpanāśini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 12 ||
+                </span>
+            </p>
+
+            <p>
+                ದೇಹಿ ಸೌಭಾಗ್ಯಮಾರೋಗ್ಯಂ ದೇಹಿ ದೇವಿ ಪರಂ ಸುಖಮ್ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೩ || <br>
+                <span class="ENG">
+                    dēhi saubhāgyamārōgyaṁ dēhi dēvi paraṁ sukham |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 13 ||
+                </span>
+            </p>
+
+            <p>
+                ವಿಧೇಹಿ ದೇವಿ ಕಲ್ಯಾಣಂ ವಿಧೇಹಿ ವಿಪುಲಾಂ ಶ್ರಿಯಮ್ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೪ || <br>
+                <span class="ENG">
+                    vidhēhi dēvi kalyāṇaṁ vidhēhi vipulāṁ śriyam |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 14 ||
+                </span>
+            </p>
+
+            <p>
+                ವಿಧೇಹಿ ದ್ವಿಷತಾಂ ನಾಶಂ ವಿಧೇಹಿ ಬಲಮುಚ್ಚಕೈಃ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೫ || <br>
+                <span class="ENG">
+                    vidhēhi dviṣatāṁ nāśaṁ vidhēhi balamuccakaiḥ |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 15 ||
+                </span>
+            </p>
+
+            <p>
+                ಸುರಾಸುರಶಿರೋರತ್ನನಿಘೃಷ್ಟಚರಣೇಽಂಬಿಕೇ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೬ || <br>
+                <span class="ENG">
+                    surāsuraśirōratnanighr̥ṣṭacaraṇē:'mbikē |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 16 ||
+                </span>
+            </p>
+
+            <p>
+                ವಿದ್ಯಾವಂತಂ ಯಶಸ್ವನ್ತಂ ಲಕ್ಷ್ಮೀವಂತಂಚ ಮಾಂ ಕುರು |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೭ || <br>
+                <span class="ENG">
+                    vidyāvantaṁ yaśasvantaṁ lakṣmīvantañca māṁ kuru |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 17 ||
+                </span>
+            </p>
+
+            <p>
+                ದೇವಿ ಪ್ರಚಂಡದೋರ್ದಂಡದೈತ್ಯದರ್ಪನಿಷೂದಿನಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೮ || <br>
+                <span class="ENG">
+                    dēvi pracaṇḍadōrdaṇḍadaityadarpaniṣūdini |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 18 ||
+                </span>
+            </p>
+
+            <p>
+                ಪ್ರಚಂಡದೈತ್ಯದರ್ಪಘ್ನೇ ಚಂಡಿಕೇ ಪ್ರಣತಾಯ ಮೇ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೧೯ || <br>
+                <span class="ENG">
+                    pracaṇḍadaityadarpaghnē caṇḍikē praṇatāya mē |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 19 ||
+                </span>
+            </p>
+
+            <p>
+                ಚತುರ್ಭುಜೇ ಚತುರ್ವಕ್ತ್ರಸಂಸ್ತುತೇ ಪರಮೇಶ್ವರಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೦ || <br>
+                <span class="ENG">
+                    caturbhujē caturvaktrasaṁstutē paramēśvari |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 20 ||
+                </span>
+            </p>
+
+            <p>
+                ಕೃಷ್ಣೇನ ಸಂಸ್ತುತೇ ದೇವಿ ಶಶ್ವದ್ಭಕ್ತ್ಯಾ ಸದಾಂಬಿಕೇ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೧ || <br>
+                <span class="ENG">
+                    kr̥ṣṇēna saṁstutē dēvi śaśvadbhaktyā sadāmbikē |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 21 ||
+                </span>
+            </p>
+
+            <p>
+                ಹಿಮಾಚಲಸುತಾನಾಥಸಂಸ್ತುತೇ ಪರಮೇಶ್ವರಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೨ || <br>
+                <span class="ENG">
+                    himācalasutānāthasaṁstutē paramēśvari |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 22 ||
+            </p>
+            </span>
+            </p>
+
+            <p>
+                ಇಂದ್ರಾಣೀಪತಿಸದ್ಭಾವಪೂಜಿತೇ ಪರಮೇಶ್ವರಿ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೩ || <br>
+                <span class="ENG">
+                    indrāṇīpatisadbhāvapūjitē paramēśvari |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 23 ||
+            </p>
+            </span>
+            </p>
+
+            <p>
+                ದೇವಿ ಭಕ್ತಜನೋದ್ದಾಮದತ್ತಾನಂದೋದಯೇಽಂಬಿಕೇ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೪ || <br>
+                <span class="ENG">
+                    dēvi bhaktajanōddāmadattānandōdayē:'mbikē |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 24 ||
+                </span>
+            </p>
+
+            <p>
+                ಭಾರ್ಯಾಂ ಮನೋರಮಾಂ ದೇಹಿ ಮನೋವೃತ್ತಾನುಸಾರಿಣೀಮ್ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೫ || <br>
+                <span class="ENG">
+                    bhāryāṁ manōramāṁ dēhi manōvr̥ttānusāriṇīm |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 25 ||
+                </span>
+            </p>
+
+            <p>
+                ತಾರಿಣಿ ದುರ್ಗಸಂಸಾರಸಾಗರಸ್ಯಾಚಲೋದ್ಭವೇ |<br>
+                ರೂಪಂ ದೇಹಿ ಜಯಂ ದೇಹಿ ಯಶೋ ದೇಹಿ ದ್ವಿಷೋ ಜಹಿ || ೨೬ || <br>
+                <span class="ENG">
+                    tāriṇi durgasaṁsārasāgarasyācalōdbhavē |<br>
+                    rūpaṁ dēhi jayaṁ dēhi yaśō dēhi dviṣō jahi || 26 ||
+                </span>
+            </p>
+
+            <p>
+                ಇದಂ ಸ್ತೋತ್ರಂ ಪಠಿತ್ವಾ ತು ಮಹಾಸ್ತೋತ್ರಂ ಪಠೇನ್ನರಃ |<br>
+                ಸಪ್ತಶತೀಂ ಸಮಾರಾಧ್ಯ ವರಮಾಪ್ನೋತಿ ದುರ್ಲಭಮ್ || ೨೭ || <br>
+                <span class="ENG">
+                    idaṁ stōtram paṭhitvā tu mahāstōtram paṭhēnnaraḥ |<br>
+                    saptaśatīṁ samārādhya varamāpnōti durlabham || 27 ||
+                </span>
+            </p>
+
+            <p>
+                ಇತಿ ಶ್ರೀಮಾರ್ಕಂಡೇಯಪುರಾಣೇ ಅರ್ಗಳಾ ಸ್ತೋತ್ರಮ್ | <br>
+                <span class="ENG">
+                    iti śrīmārkaṇḍēyapurāṇē argalā stōtram |
+                </span>
+            </p>
+
+
+
+
+
+            <h1>ಅರ್ಗಲಾ ಸ್ತೋತ್ರಂ <span class="ENG">(Argala Stotram)</span></h1>
+
+            <p>
+                ಪತ್ನೀಂ ಮನೋರಮಾಂ ದೇಹಿ ಮನೋವೃತ್ತಾನುಸಾರಿಣೀಂ | <br>
+                ತಾರಿಣೀಂ ದುರ್ಗಸಂಸಾರ-ಸಾಗರಸ್ಯ ಕುಲೋದ್ಭವಾಂ ||
+            </p>
+
+            <p>
+                Patnīṁ manoramāṁ dēhi manōvṛttānusāriṇīm | <br>
+                Tāriṇīṁ durgasaṁsārasāgarasya kulōdbhavām ||
+            </p>
+
+            <p>
+                பத்னீம் மனோரமாம் தேஹி மனோவ்ருத்தானுசாரிணீம் | <br>
+                தாரிணீம் துர்கஸம்ஸாரசாகரஸ்ய குலோத்பவாம் ||
+            </p>
+
+            <p>
+                पत्नीं मनोरमां देहि मनोवृत्तानुसारिणीम् | <br>
+                तारिणींदुर्गसंसारसागरस्य कुलोद्भवाम् ||
+            </p>
+
+            Chant this mantra daily for 41 days (one mandala), 108 times using a japa mala, before beginning bride
+            search.<br>
+            Source: <a href="https://youtube.com/shorts/D84vrDrqOG4?si=h7SjTwnHkKvZWyrd" target="_blank" rel="noopener">
+                (Youtube Short)</a>
+            <a href="https://youtu.be/esLAkMjZdUA?si=fbgMiICpq7IB-3aJ" target="_blank" rel="noopener">Explanation by
+                Chaganti
+                Koteswara Rao Garu</a>
+
+
+            <h4>Meaning</h4>
+            O Mother Durgā! Bless me with a wife<br>
+            who delights my mind,<br>
+            who acts in accordance with my nature,<br>
+            who helps uplift and support me,<br>
+            who enables me to cross the vast ocean of worldly existence,<br>
+            and who is capable of giving birth to a son who uplifts the lineage.<br>
+
+            <h4>Sankalpa</h4>
+            <ul>
+                <li>Set a clear intention (e.g., to find a good life partner).</li>
+                <li>Write and repeat it daily before chanting.</li>
+            </ul>
+
+            <h4>Daily Practice</h4>
+            <ul>
+                <li>Time: Early morning (Brahma Muhurta, 4–6 AM).</li>
+                <li>Cleanliness: Bathe and wear clean clothes.</li>
+                <li>Altar: Place an image of Goddess Durga or Amman.</li>
+                <li>Offerings: Light a lamp, offer flowers, incense, and food.</li>
+            </ul>
+
+            <h4>Japa Discipline</h4>
+            <ul>
+                <li>Chant 108 times daily with a mala (rudraksha or tulsi).</li>
+                <li>Be consistent — don’t skip days.</li>
+                <li>Sit in the same place and direction (preferably east).</li>
+            </ul>
+
+            <h4>Completion</h4>
+            <ul>
+                <li>On day 41, perform a special puja or homa if possible.</li>
+                <li>Thank the Goddess and release your intention.</li>
+            </ul>
+
+            <!-- Centralized Scripts -->
+            <script src="../scripts/common.js"></script>
 </body>
 
 </html>
