--- a/puja/homam2.html
+++ b/puja/homam2.html
@@ -72,7 +72,7 @@
 
     <h2>ಆಚಮನ - ಸಂಕಲ್ಪ <span class="ENG">(Achamanam - Sankalpa - purification & intention)</span></h2>
 
-    <div class="mantra-block">
+    <div>
 
         ಮಮ ಉಪಾತ್ತ ಸಮಸ್ತ ದುರಿತಕ್ಷಯ ದ್ವಾರಾ
         <span class="ENG">(mama upaatta samasta duritakshaya dvaaraa)</span><br>
@@ -235,7 +235,7 @@
             recite:</strong></p>
 
 
-    <div class="mantra-block">
+    <div>
         ಓಂ ಅಗ್ನಿಂ ವ್ರತಪತಿಂ ಆವಾಹಯಾಮಿ
         <span class="ENG">(Om agnim vratapatim aavaahayami)</span><br>
 
@@ -246,7 +246,7 @@
 
     <p><strong>Dip a stick in ghee, offer the ghee to the fire, then recite:</strong></p>
 
-    <div class="mantra-block">
+    <div>
         ಅಗ್ನಿಂ ಪ್ರಜ್ವಲಿತಂ ವಂದೇ ಜಾತವೇದೋ ಹುತಾಶನಮ್ |
         <span class="ENG">(agnim prajvalitam vande jaatavedo
             hutaashanam)</span><br>
@@ -260,7 +260,7 @@
             then wet the akshatas with water from main vessel, go around the homam kund clockwise
             spilling the soaked akshatas on the ground or wooden plank, while reciting:</strong></p>
 
-    <div class="mantra-block">
+    <div>
         ಪರೀತ್ವಾಗ್ನೇ ಪರೀಮೃಜ್ಯ
         <span class="ENG">(paritvaagne pareemrujya)</span><br>
 
@@ -299,7 +299,7 @@
             R->L in the top, D->U right, R->L bottom, D->U left.
         </strong></p>
 
-    <div class="mantra-block">
+    <div>
         ಆದಿತೇ ಅನುಮನ್ಯಸ್ವ ।
         <span class="ENG">(Aadite anuman yasva)</span><br>
 
@@ -316,7 +316,7 @@
 
     <h2>ಅಗ್ನಿ ಶುದ್ಧಿ ಮಂತ್ರಗಳು <span class="ENG">(Fire purification mantras)</span></h2>
 
-    <ol class="mantra-block">
+    <ol>
         <li class="mantra-section">
             ಓಂ ಅಗ್ನಯೇ ಸಮಿಧಮಾಹಾರ್ಷಂ ಬೃಹತೇ ಜಾತವೇದಸ್ತೇ ಯಥಾ ತ್ವಮಗ್ನೇ<br>
             ಸಮಿಧಾ ಸಮಿಧ್ಯಸ ಏವಂ ಮಾ ಮಾಯುಷಾ ವರ್ಚಸಾ ಸನ್ಯಾಮೇಧಯಾ ಪ್ರಜಯಾ<br>
@@ -414,12 +414,13 @@
             <span class="ENG">(Om samidham aadhaaya agne sarvavrato bhooyaasang svaahaa |<br>
                 agnaya idam na mama ||)</span>
         </li>
+    </ol>
 
+    <strong>ಪ್ರಾಯಶ್ಚಿತ್ತಂ - 4 ಮಂತ್ರಗಳು
+        <span class="ENG">(Prayaschittham - 4 mantras)</span><br>
+    </strong>
 
-        <strong>ಪ್ರಾಯಶ್ಚಿತ್ತಂ - 4 ಮಂತ್ರಗಳು
-            <span class="ENG">(Prayaschittham - 4 mantras)</span><br>
-        </strong>
-
+    <ol>
         <li class="mantra-section">
             ಓಂ ಭೂಃ ಸ್ವಾಹಾ |
             ಅಗ್ನಯ ಇದಂ ನಮಮ ॥
@@ -455,7 +456,7 @@
     <p><strong>Do with akshatas, offer in all 10 directions, i.e. 8 + 2 (up and down), while reciting the
             following mantras:</strong></p>
 
-    <div class="mantra-block">
+    <div>
         ಓಂ ಅಗ್ನಯೇ ನಮಃ | ಓಂ ಜಾತವೇದಸೇ ನಮಃ ॥
         <span class="ENG">(Om agnaye namah | Om jaatavedase namah ||)</span><br>
 
@@ -478,7 +479,7 @@
     <p><strong>This solves an Vaastu doshas in the house. Must place ghee-dipped stick is the specific direction of
             lord.</strong></p>
 
-    <div class="mantra-block">
+    <div>
 
         <p><strong>ಅಗ್ನಿ - ಪ್ರಾರಂಭ <span class="ENG">(Agni - Prarambha)</span></strong></p>
         ಅಗ್ನಯೇ ವ್ರತಪತಯೇ ನಮಃ | ಅಗ್ನಯೇ ಸ್ವಾಹಾ | ಅಗ್ನಯ ಇದಂ ನಮಮ ||<br>
@@ -606,7 +607,7 @@
         This will solve all the problems in the horoscope.
     </p>
 
-    <div class="mantra-block">
+    <div>
         <!-- Navagraha Āvāhana -->
 
         <p><strong>ನವಗ್ರಹ ಆವಾಹನ <span class="ENG">(Navagraha Āvāhana)</span></strong></p>
@@ -759,7 +760,7 @@
 
     <!-- a. Gayatri -->
     <h4><strong>a. ಗಾಯತ್ರಿ - Havis: Cow Ghee<span class="ENG">(Gayatri)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಸ್ವಾಹಾ |<br>
         ಓಂ ಭೂಃ ಸ್ವಾಹಾ |<br>
         ಓಂ ಭೂರ್ಭುವಃ ಸ್ವಾಹಾ |<br>
@@ -781,7 +782,7 @@
 
     <!-- b. Narayana -->
     <h4><strong>b. ನಾರಾಯಣ - Havis: 4 Peepal Tree sticks<span class="ENG">(Narayana)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ನಮೋ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ |<br>
         ಓಂ ನಮೋ ಭಗವತೇ ವಾಸುದೇವಾಯ ಸ್ವಾಹಾ |<br>
         ಓಂ ವಿಷ್ಣವೇ ನಮಃ ಸ್ವಾಹಾ |<br>
@@ -794,7 +795,7 @@
 
     <!-- c. Maha Lakshmi -->
     <h4><strong>c. ಮಹಾಲಕ್ಷ್ಮಿ - Havis: Dried Lotus flower<span class="ENG">(Maha Lakshmi)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಶ್ರಿಯಃ ಸ್ವಾಹಾ |<br>
         ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಕ್ಲೀಂ ಮಹಾಲಕ್ಷ್ಮೀಃ ಏ ಹ್ಯೇಹಿ ಸರ್ವಸೌಭಾಗ್ಯಂ ದೇಹಿ ಮೇ ಸ್ವಾಹಾ ||<br>
         <span class="ENG">(Om shriyah svaahaa |<br>
@@ -803,7 +804,7 @@
 
     <!-- d. Ganapati -->
     <h4><strong>d. ಗಣಪತಿ - Havis: White Arka plant stick<span class="ENG">(Ganapati)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಕ್ರೀಂ ಗ್ಲಾಂ ಗಂ ಗಣಪತಯೇ ವರವರದ ಸರ್ವಜನಮ್ ಮೇ ವಶಮಾನಯ ಸ್ವಾಹಾ ||<br>
         <span class="ENG">(Om shreem hreem kleem glam gam ganapataye varavarada sarvajanam me vashamanaaya
             svaahaa ||)</span>
@@ -811,7 +812,7 @@
 
     <!-- e. Garuda -->
     <h4><strong>e. ಗರುಡ - Havis: Cardamom<span class="ENG">(Garuda)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಕ್ಷಿಂ ಕ್ಷಿಪ್ ಸ್ವಾಹಾ |<br>
         ಗರುಡಾಯ ಸ್ವಾಹಾ |<br>
         ಗರುಡಾಯ ಈದಂ ನಮಮ ||<br>
@@ -822,7 +823,7 @@
 
     <!-- f. Sudarshana -->
     <h4><strong>f. ಸುದರ್ಶನ - Havis: Pacha Karpooram<span class="ENG">(Sudarshana)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಕ್ಷ್ಮೌಂ ಸಹಸ್ರಾರ ಹುಂ ಫಟ್ ಸ್ವಾಹಾ |<br>
         ಸುದರ್ಶನ ಚಕ್ರರಾಜಾಯ ಸ್ವಾಹಾ |<br>
         ಸುದರ್ಶನ ಚಕ್ರರಾಜಾಯ ಈದಂ ನಮಮ ||<br>
@@ -833,7 +834,7 @@
 
     <!-- g. Lakshmi Narasimha -->
     <h4><strong>g. ಲಕ್ಷ್ಮೀ ನರಸಿಂಹ - Havis: Uttareni stick<span class="ENG">(Lakshmi Narasimha)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಶ್ರೀಂ ಕ್ರೌಂ ಶ್ರೀಂ |<br>
         ಉಗ್ರಂ ವೀರಂ ಮಹಾವಿಷ್ಣುಂ |<br>
         ಜ್ವಲಂತಂ ಸರ್ವತಃ ಮುಖಮ್ |<br>
@@ -852,7 +853,7 @@
 
     <!-- h. Gopala -->
     <h4><strong>h. ಗೋಪಾಲ - Havis: 3 times Honey + ghee (just a drop)<span class="ENG">(Gopala)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಕ್ರೀಂ ಕೃಷ್ಣಾಯ |<br>
         ಗೋವಿಂದಾಯ |<br>
         ಗೋಪೀಜನ ವಲ್ಲಭಾಯ ಸ್ವಾಹಾ ||<br>
@@ -865,7 +866,7 @@
 
     <!-- i. Vashyamukhi -->
     <h4><strong>i. ವಶ್ಯಮುಖಿ - Havis: Dry coconut pieces<span class="ENG">(Vashyāmukhi)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಶ್ರೀಂ ರಾಜಮುಖಿ |<br>
         ವಶ್ಯಮುಖಿ |<br>
         ರಾಜವಶ್ಯಮುಖಿ ಸ್ವಾಹಾ ||<br>
@@ -876,7 +877,7 @@
 
     <!-- j. Shyamala -->
     <h4><strong>j. ಶ್ಯಾಮಳ - Havis: Dry coconut pieces<span class="ENG">(Shyamala)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಐಂ ಹ್ರೀಂ ಶ್ರೀಂ |<br>
         ಓಂ ನಮೋ ಭಗವತಿ ಶ್ರೀಮಾತಂಗೀಶ್ವರಿ |<br>
         ಸರ್ವಜನ ಮನೋಹರಿ |<br>
@@ -901,7 +902,7 @@
 
     <!-- k. Hayagriva -->
     <h4><strong>k. ಹಯಗ್ರೀವ - Havis: Vallarai<span class="ENG">(Hayagriva)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಶ್ರೀಂ ಹ್ಸೌಂ ಶ್ರೀಂ |<br>
         ಉದ್ಗಾರ ಪ್ರಣವೋದ್ಗೀತ |<br>
         ಸರ್ವ ವಾಗೀಶ್ವರೇಶ್ವರ |<br>
@@ -920,7 +921,7 @@
 
     <!-- l. Vagvadini -->
     <h4><strong>l. ವಾಗ್ವಾದಿನಿ - Havis: Vallarai<span class="ENG">(Vagvadini)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಐಂ ಕ್ರೀಂ ಸೌಃ ವದವದ ವಾಗ್ವಾದಿನ್ಯೈ ಸ್ವಾಹಾ |<br>
         ವಾಗ್ವಾದಿನ್ಯೈ ಈದಂ ನಮಮ ||<br>
         <span class="ENG">(Om aim kleem sauh vadavada vagvaadiniyai svaahaa |<br>
@@ -929,7 +930,7 @@
 
     <!-- m. Vageeshwari -->
     <h4><strong>m. ವಾಗೀಶ್ವರಿ - Havis: Vallarai<span class="ENG">(Vageeshwari)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಐಂ ಓಷ್ಠಾ ಪಿಥಾನಾ ನಕುಲಿ |<br>
         ದಂತೈಃ ಪರಿವೃತ್ತಾ ಪವಿಃ |<br>
         ಸರ್ವಸ್ಮೈ ವಾಚ ಈಶಾನಾ |<br>
@@ -946,7 +947,7 @@
 
     <!-- n. Saraswati -->
     <h4><strong>n. ಸರಸ್ವತಿ - Havis: Vallarai<span class="ENG">(Saraswati)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಪ್ರಣೋದೇವೀ ಸರಸ್ವತೀ |<br>
         ವಾಜೇಭಿ ರ್ವಾಜಿನೀವತೀ |<br>
         ಧೀನಾ ಮವಿತ್ರವತ್ |<br>
@@ -961,7 +962,7 @@
 
     <!-- o. Gauri -->
     <h4><strong>o. ಗೌರಿ - Havis: Turmeric piece<span class="ENG">(Gauri)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಗೌರಿ ಮಿಮಾಯ ಸಲಿಲಾನಿ |<br>
         ತಕ್ಷ ತ್ಯೇಕಪದೀ ದ್ವಿಪದೀ |<br>
         ಸಾ ಚತುಷ್ಪದೀ | ಅಷ್ಟಾಪದೀ | ನವಪದೀ |<br>
@@ -978,7 +979,7 @@
 
     <!-- p. Pratyangiraa -->
     <h4><strong>p. ಪ್ರತ್ಯಂಗಿರಾ - Havis: Giloy twigs<span class="ENG">(Pratyangiraa)</span></strong></h4>
-    <div class="mantra-block">
+    <div>
         ಓಂ ಯಾಂ ಕಲ್ಪಯಂತಿ ನೋ ರಯಃ ಕ್ರೂರಾನ್ ಕೃತ್ಯಾನ್ ವಧೂಮಿವ |<br>
         ತಾಂ ಬ್ರಹ್ಮಣಾಪ ನಿರ್ಣುದ್ಮಃ ಪ್ರತ್ಯಕ್ಕರ್ತಾರ ಮೃಚ್ಚತು ||<br>
         ಪ್ರತ್ಯಂಗಿರಾ ಉಗ್ರ ಕೃತ್ಯಾಯೈ ಸ್ವಾಹಾ |<br>
@@ -991,7 +992,7 @@
 
     <h2>ವ್ಯಾಹೃತಿ ಮಂತ್ರಗಳು <span class="ENG">(Vyahriti mantras)</h2>
 
-    <div class="mantra-block">
+    <div>
         ಭೂ॑ರನ್ನ॒ಮ॒ಗ್ನಯೇ॑ ಪೃಥಿ॒ವ್ಯೈ॑ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॒ವೋ॒ಽನ್ನಂ॒ ವಾಯ॑ವೇ॒ಽಂತ॒ರಿಕ್ಷಾ॑ಯ ಸ್ವಾ॑ಹಾ ।<br>
         ಸು॒ವರ॒ನ್ನ॒ಮಾ॒ದಿತ್ಯಾ॑ಯ ದಿ॒ವೇ॑ ಸ್ವಾ॑ಹಾ ।<br>
@@ -1005,7 +1006,7 @@
             Namo devebhyah svadhaa pitrubhyah bhoor bhuvah suvar annamoṃ || 1 ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಭೂ॑ರಗ್ನಯೇ॑ ಪೃಥಿ॒ವ್ಯೈ॑ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॒ವೋ॒ ವಾಯ॑ವೇ॒ಽಂತ॒ರಿಕ್ಷಾ॑ಯ ಸ್ವಾ॑ಹಾ ।<br>
         ಸು॒ವರಾ॒ದಿತ್ಯಾ॑ಯ ದಿ॒ವೇ॑ ಸ್ವಾ॑ಹಾ ।<br>
@@ -1019,7 +1020,7 @@
             Namo devebhyah svadhaa pitrubhyah bhoor bhuvah suvar agna om || 2 ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಭೂ॑ರಗ್ನಯೇ॑ ಚ ಪೃಥಿ॒ವ್ಯೈ॑ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॒ವೋ॒ ವಾಯ॑ವೇ ಚಾಂ॒ತರಿ॑ಕ್ಷಾಯ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
         ಸು॒ವರಾ॒ದಿತ್ಯಾ॑ಯ ಚ ದಿ॒ವೇ॑ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
@@ -1034,7 +1035,7 @@
     </div>
 
 
-    <div class="mantra-block">
+    <div>
         ಆದಿತೇ ಅನುಮನ್ಯಸ್ವ ।
         <span class="ENG">(Aadite anuman yasva)</span><br>
 
@@ -1052,7 +1053,7 @@
     <h2>ಉಪಸ್ಥಾನ <span class="ENG">(Upasthana - formal conclusion offering)</span></h2>
     <h2>ಭಸ್ಮ ಧಾರಣ <span class="ENG">(Applying sacred ash)</h2>
 
-    <div class="mantra-block">
+    <div>
         ಯ॑ತ್ತೇ ಅ॒ಗ್ನೇ ತೇ॑ಜ॒ಸ್ತೇನಾ॒ಹಂ ತೇ॑ಜ॒ಸ್ವೀ ಭೂ॑ಯಾಸಂ ।<br>
         ಯ॑ತ್ತೇ ಅ॒ಗ್ನೇ ವ॑ರ್ಚ॒ಸ್ತೇನಾ॒ಹಂ ವ॑ರ್ಚ॒ಸ್ವೀ ಭೂ॑ಯಾಸಂ ।<br>
         ಯ॑ತ್ತೇ ಅ॒ಗ್ನೇ ತ॑ರ॒ಸ್ತೇನಾ॒ಹಂ ತ॑ರ॒ಸ್ವೀ ಭೂ॑ಯಾಸಂ ॥<br>
@@ -1062,7 +1063,7 @@
             yàtte ágne táraste͑nā́ham tárasvī bhū́yāsam ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಮ॒ಯಿ ಮೇ॒ಧಾಂ ಮ॒ಯಿ ಪ್ರ॒ಜಾಂ ಮಯ್ಯ॑ಗ್ನಿ॒ಸ್ತೇಜೋ॑ ದಧಾತು ।<br>
         ಮ॒ಯಿ ಮೇ॒ಧಾಂ ಮ॒ಯಿ ಪ್ರ॒ಜಾಂ ಮಯೀಂದ್ರ॒ ಇಂದ್ರಿ॑ಯಂ ದಧಾತು ।<br>
         ಮ॒ಯಿ ಮೇ॒ಧಾಂ ಮ॒ಯಿ ಪ್ರ॒ಜಾಂ ಮಯೀ ಸೂರ್ಯೋ॒ ಭ್ರಾಜೋ॑ ದಧಾತು ॥<br>
@@ -1072,7 +1073,7 @@
             mayí mḗdhām mayí prajām mayī sū́ryo bhrā́jo dadhātu ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಮಾ॒ನಸ್ತೋ॑ಕೇ ತ॒ನಯೇ॒ ಮಾ॒ನ ಆಯು॑ಷಿ<br>
         ಮಾ॒ನೋ ಗೋ॑ಷು ಮಾ॒ನೋ ಅಶ್ವೇ॑ಷು ರೀರಿಷಃ ।<br>
         ವೀ॒ರಾನ್ ಮಾ॒ನೋ ರು॑ದ್ರಭಾಮಿ॒ತೋ ವಧೀ॑ಃ<br>
@@ -1084,7 +1085,7 @@
             haviṣmánto namasā́ vídhemate ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ತ್ರ್ಯಾ॒ಯುಷಂ ಜಮದ॒ಗ್ನೇಃ ಕಶ್ಯ॑ಪಸ್ಯ ತ್ರ್ಯಾ॒ಯುಷಂ ।<br>
         ಯದ್ದೇ॒ವಾನಾಂ॒ ತ್ರ್ಯಾ ಯು॑ಷಂ ತನ್ಮೇ॑ ಅಸ್ತು ತ್ರ್ಯಾ॒ಯುಷಂ ॥<br>
 
@@ -1092,7 +1093,7 @@
             yaddēvā́nām tryā́ yuṣam tánmḗ astu tryā́yuṣam ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಮೇ॒ಧಾವೀ॒ ಭೂಯಾ॑ಸಂ । (ಇತಿ ಲಲಾಟೇ)<br>
         ತೇ॒ಜಸ್ವೀ॒ ಭೂಯಾ॑ಸಂ । (ಇತಿ ದಕ್ಷಿಣಭುಜೇ)<br>
         ವ॒ರ್ಚಸ್ವೀ॒ ಭೂಯಾ॑ಸಂ । (ಇತಿ ವಾಮಭುಜೇ)<br>
@@ -1112,7 +1113,7 @@
             sarvásamṛddhó bhū́yāsam || (on the head))</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಪುನ॑ಸ್ತ್ವಾ॒ದಿತ್ಯಾ॒ ರುದ್ರಾ॒ ವಸವಃ॒ ಸಮಿ॑ಂಧತಾಂ ।<br>
         ಪುನ॒ರ್ಬ್ರಹ್ಮ॑ಣೋ ವಸುನೀಥಯ॒ಜ್ಞಃ ।<br>
         ಘೃ॒ತೇನ॒ ತ್ವಂ ತನು॑ವೋ ವರ್ಧಯಸ್ವ ।<br>
@@ -1135,7 +1136,7 @@
     <h2>ನಮಸ್ಕಾರ <span class="ENG">(Salutation / prostration)</span></h2>
 
 
-    <div class="mantra-block">
+    <div>
         ಸ್ವಸ್ತಿ ಶ್ರದ್ದಾಂ ಮೇಧಾಂ ಯಶಃ ಪ್ರಜ್ನಾಂ ವಿದ್ಯಾಂ ಬುಧ್ಯಂ ಶ್ರಿಯಂ |<br>
         ಬಲ ಮಾ॒ಯುಷ್ಯಂ ತೇಜ ಆರೋಗ್ಯಂ ದೇಹಿ ಮೇ ಹವ್ಯವಾಹನ ॥<br>
 
@@ -1143,7 +1144,7 @@
             bala māyuṣyaṃ teja ārogyaṃ dehi mē havya-vāhana ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <div>
         ಯಸ್ಯ ಸ್ಮೃತ್ಯಾಚ್ ನಾಮೋಕ್ತ್ಯಾ ತಪೋ ಹೋಮ ಕ್ರಿಯಾದಿಷು |<br>
         ನ್ಯೂನಂ ಸಂಪೂರ್ಣತಾಂ ಯಾತಿ ಸದ್ಯೋ ವಂದೇ ಹುತಾಶನಮ್ ॥<br>
 
@@ -1151,7 +1152,9 @@
             nyūnaṃ sampūrṇatām yāti sadyo vande hutāśanam ||)</span>
     </div>
 
-    <div class="mantra-block">
+    <h4>ಪ್ರಾರ್ಥನ <span class="ENG">(Prarthana)</span></h4>
+
+    <div>
         ಮಂತ್ರಹೀನಂ ಕ್ರಿಯಾಹೀನಂ ಭಕ್ತಿಹೀನಂ <u>ಹುತಾಶನ</u> |<br>
         ಯತ್ಪೂಜಿತಂ ಮಯಾ <u>ದೇವ</u> ಪರಿಪೂರ್ಣಂ ತದಸ್ತು ತೇ |<br>
         ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ <u>ಭಗವಾನ್</u> <u>ಸರ್ವಾತ್ಮಕಃ</u> |<br>
