--- a/general/kuladevata-prarthana.html
+++ b/general/kuladevata-prarthana.html
@@ -1,33 +1,34 @@
 <div style="display: flex; align-items: center; gap: 1em; margin-bottom: 0.5em;">
-    <h2 style="margin: 0;">ಕುಲದೇವ ಪ್ರಾರ್ಥನ <span class="ENG">(Kuladeva Prarthana)</span></h2>
-    <audio controls="controls" src="../audio/veerabhadra-dhyana-sloka.mp3" style="vertical-align: middle;"></audio>
+    <h2 style="margin: 0;">ಕುಲದೇವ ಪ್ರಾರ್ಥನ <span class="ENG">(Kuladeva Prārthanā)</span></h2>
 </div>
 
-<p>
-    <b>ಶನ್ನೇತ್ರಂ</b> ತ್ರಿಮುಖಂ ಭೀಮಂ ಕಾಲಮೇಘಸಮ<b>ಪ್ರಭಂ</b> । <br>
-    <b>ಉದರಶಿಜ್ವಲನಂ</b> ನೀಲಘಾತ್ರಂ ಷಟ್ಬಾಹುಶೋಭಿತಂ ।। <br> <br>
 
-    ಪಾನಪಾತ್ರಸಿಶೂಲೇಷು ಚಾಪಖಡ್ಗಧರಂ ಶುಭಂ । <br>
-    ಭೂತಪ್ರೇತಾದಿದಮನಂ ದುಷ್ಟಾರತಿವಿನಾಶನಂ ।। <br> <br>
+
+<p>
+    ಕುಲದೇವಾಯ ನಮೋ ನಿತ್ಯಂ ವೀರಭದ್ರಾಯ ಮಹಾಬಲೇ । <br>
+    <span class="ENG"> Kuladevaaya namo nityam veerabhadraaya mahaabale | <br></span>
+    
+    ಪೂಜಾಂ ಗೃಹಾಣ ದೇವೇಶ ಕರ್ಮಸಿದ್ಧಿಂ ಪ್ರದೇಹಿ ಮೇ ॥ <br>
+    <span class="ENG"> Pujaam grihaana devesha karmasiddhim pradehi me ||</span>
+
+</p> 
+
+<!-- <p>
+    <audio controls="controls" src="../audio/veerabhadra-dhyana-sloka.mp3" style="vertical-align: middle;"></audio>
+
+    ಷಣ್ಣೇತ್ರಂ ತ್ರಿಮುಖಂ ಭೀಮಂ ಕಾಲಮೇಘಸಮಪ್ರಭಂ । <br>
+    <span class="ENG"> ṣaṇṇetraṃ trimukhaṃ bhīmaṃ kālameghasamaprabhaṃ । <br> </span>
+    ಉದರಶಿಜ್ವಲನಂ ನೀಲಗಾತ್ರಂ ಷಟ್ಬಾಹುಶೋಭಿತಂ ॥ <br>
+    <span class="ENG"> udaraśijvalanaṃ nīlagātraṃ ṣaṭbāhuśobhitaṃ ॥ <br> </span> <br>
+
+    ಪಾನಪಾತ್ರಾಸಿಶೂಲೇಷು ಚಾಪಖಡ್ಗಧರಂ ಶುಭಂ । <br>
+    <span class="ENG"> pānapātrāsiśūleṣu cāpakhaḍgadharaṃ śubhaṃ । <br> </span>
+    ಭೂತಪ್ರೇತಾದಿದಮನಂ ದುಷ್ಟಾರತಿವಿನಾಶನಂ ।। <br>
+    <span class="ENG"> bhūtapretādidamanaṃ duṣṭārativināśanaṃ ॥ <br> </span> <br>
 
     ಮೇರುವಾಸಂ ಮಹೇಶಂ ತಂ ವೀರಭದ್ರಂ ನಮಾಮ್ಯಹಂ ॥ <br>
-
-    <!-- शन्नेत्रं त्रिमुखं भीमं कालमेघसमप्रभं । <br>
-    उदरशिज्वलनं नीलघात्रं षट्बाहुशोभितं ॥ <br> <br>
-    पानपात्रसिशूलेषु चापखड्गधरं शुभं । <br>
-    भूतप्रेतादिदमनं दु्ष्टारतिविनाशनं ॥ <br> <br>
-    मेरुवासं महेशं तं वीरभद्रं नमाम्यहम् ॥ <br> <br> -->
-
-    <span class="ENG">
-        shannetram trimukham bheemam kalameghasamaprabham | <br>
-        udarashijvalanam neelaghatram shatbahushobhitam || <br> <br>
-
-        paanapatrasishooleShu chaapakhadgadharam shubham | <br>
-        bhootapretaadidamanam dushtarativinashanam || <br> <br>
-
-        meruvaasam mahesham tam veerabhadram namaamyaham || <br>
-    </span>
-</p>
+    <span class="ENG"> meruvāsaṃ maheśaṃ taṃ vīrabhadraṃ namāmyahaṃ ॥ <br> </span>
+</p> -->
 
 
 <!-- <p>
