--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
     </main>
 
     <hr>
+    <section style="margin: 20px 0;">
+        <h2>Tools</h2>
+        <ul>
+            <li><a href="scroller/index.html">Auto-Scrolling Viewer</a> — Read pages hands-free with automatic scrolling</li>
+        </ul>
+    </section>
+
+    <hr>
     <ol>
         <li>
             <a href="puja/puja-template.html">Template for new pujas</a>
